@@ -16,7 +16,7 @@ import org.eclipse.jface.action.Action;
 import org.eclipse.jface.util.Assert;
 import org.eclipse.jface.viewers.TableViewer;
 
-import org.eclipse.ui.help.WorkbenchHelp;
+import org.eclipse.ui.PlatformUI;
 
 /**
  * This action selects all entries currently showing in view.
@@ -32,7 +32,7 @@ public class SelectAllAction extends Action {
 		super("selectAll"); //$NON-NLS-1$
 		setText(ActionMessages.getString("SelectAllAction.label")); //$NON-NLS-1$
 		setToolTipText(ActionMessages.getString("SelectAllAction.tooltip")); //$NON-NLS-1$
-		WorkbenchHelp.setHelp(this, ICHelpContextIds.SELECT_ALL_ACTION);
+		PlatformUI.getWorkbench().getHelpSystem().setHelp(this, ICHelpContextIds.SELECT_ALL_ACTION);
 		Assert.isNotNull(viewer);
 		fViewer= viewer;
 	}
