@@ -27,7 +27,6 @@ import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.actions.CopyFilesAndFoldersOperation;
 import org.eclipse.ui.actions.CopyProjectOperation;
 import org.eclipse.ui.actions.SelectionListenerAction;
-import org.eclipse.ui.help.WorkbenchHelp;
 import org.eclipse.ui.part.ResourceTransfer;
 
 /**
@@ -69,7 +68,7 @@ public class PasteAction extends SelectionListenerAction {
 		this.clipboard = clipboard;
 		setToolTipText(CViewMessages.getString("PasteAction.toolTip")); //$NON-NLS-1$
 		setId(PasteAction.ID);
-		WorkbenchHelp.setHelp(this, ICHelpContextIds.PASTE_ACTION);
+		PlatformUI.getWorkbench().getHelpSystem().setHelp(this, ICHelpContextIds.PASTE_ACTION);
 	}
 	/**
 	 * Returns the actual target of the paste action. Returns null
