@@ -24,7 +24,6 @@ import org.eclipse.ui.IWorkingSet;
 import org.eclipse.ui.IWorkingSetManager;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.dialogs.IWorkingSetEditWizard;
-import org.eclipse.ui.help.WorkbenchHelp;
 
 
 /**
@@ -43,7 +42,7 @@ public class EditWorkingSetAction extends Action {
 		setEnabled(actionGroup.getWorkingSet() != null);
 		fShell= shell;
 		fActionGroup= actionGroup;
-		WorkbenchHelp.setHelp(this, ICHelpContextIds.EDIT_WORKING_SET_ACTION);
+		PlatformUI.getWorkbench().getHelpSystem().setHelp(this, ICHelpContextIds.EDIT_WORKING_SET_ACTION);
 	}
 	
 	/*
